[emacs] Move dired-dwim-target to correct location

--- a/emacs.org
+++ b/emacs.org
@@ -1681,6 +1681,9 @@ minibuffer.
   (use-package dired
     :hook (dired-mode . dired-hide-details-mode)
     :config
+    (autoload #'dired-dwim-target-next-visible "dired-aux")
+
+    (setq dired-dwim-target #'dired-dwim-target-next-visible)
     (setq dired-recursive-copies 'always)
     (setq dired-recursive-deletes 'always)
     (let* ((safe "-lah") ; For safe switches, see `ls-lisp--insert-directory'
@@ -1691,7 +1694,6 @@ minibuffer.
     :after dired
     :config
     (setq dired-vc-rename-file t)
-    (setq dired-dwim-target #'dired-dwim-target-next-visible)
     (setq dired-create-destination-dirs 'ask))
 
   (use-package dired-x
