--- a/emacs.org
+++ b/emacs.org
@@ -530,7 +530,7 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
 #+BEGIN_SRC emacs-lisp :tangle stow/emacs/.config/emacs/lisp/exar/exar.el
   ;;; exar.el --- Emacs, X Window System and RandR -*- lexical-binding: t; -*-
 
-  ;; Copyright (C) 2020 Nicolas De Jaeghere
+  ;; Copyright (C) 2020-2021 Nicolas De Jaeghere
 
   ;; Author: Nicolas De Jaeghere <nicolas@dejaeghe.re>
   ;; Keywords: unix
@@ -5549,7 +5549,7 @@ To show holidays as agenda entries, see [[info:org#Weekly/daily agenda][Calendar
 #+BEGIN_SRC emacs-lisp :tangle stow/emacs/.config/emacs/lisp/belgian-holidays/belgian-holidays.el
   ;;; belgian-holidays --- Belgian holidays -*- lexical-binding: t; -*-
 
-  ;; Copyright (C) 2020 Nicolas De Jaeghere
+  ;; Copyright (C) 2020-2021 Nicolas De Jaeghere
 
   ;; Author: Nicolas De Jaeghere <nicolas@dejaeghe.re>
   ;; Keywords: calendar
@@ -5754,7 +5754,7 @@ Stavrou)]].
 #+BEGIN_SRC emacs-lisp :tangle stow/emacs/.config/emacs/lisp/prepcast/prepcast.el
   ;;; prepcast.el --- Prepare for screencasting -*- lexical-binding: t; -*-
 
-  ;; Copyright (C) 2020 Nicolas De Jaeghere
+  ;; Copyright (C) 2020-2021 Nicolas De Jaeghere
 
   ;; Author: Nicolas De Jaeghere <nicolas@dejaeghe.re>
   ;; Keywords: faces
