--- a/emacs.org
+++ b/emacs.org
@@ -10,9 +10,29 @@ Enable lexical binding.
 #+BEGIN_SRC emacs-lisp
   ;;; init.el --- Nicolas' Emacs configuration -*- lexical-binding: t; -*-
 
+  ;; Copyright (C) 2017-2021 Nicolas De Jaeghere
+
+  ;; Author: Nicolas De Jaeghere <nicolas@dejaeghe.re>
+  ;; URL: https://github.com/Koekelas/dotfiles
+
+  ;; This file is not part of GNU Emacs.
+
+  ;; This program is free software: you can redistribute it and/or modify
+  ;; it under the terms of the GNU General Public License as published by
+  ;; the Free Software Foundation, either version 3 of the License, or
+  ;; (at your option) any later version.
+
+  ;; This program is distributed in the hope that it will be useful,
+  ;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ;; GNU General Public License for more details.
+
+  ;; You should have received a copy of the GNU General Public License
+  ;; along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
   ;;; Commentary:
 
-  ;; Nicolas' Emacs configuration.
+  ;; This file contains Nicolas' Emacs configuration.
 
   ;;; Code:
 #+END_SRC
