--- a/emacs.org
+++ b/emacs.org
@@ -185,15 +185,12 @@ latest org and its documentation before loading org.
 
 #+BEGIN_SRC emacs-lisp
   (straight-use-package
-   `(org-plus-contrib
+   `(org
      :pre-build
      ,(list (if (eq system-type 'berkeley-unix) "gmake" "make")
             "autoloads" "info"
             (concat "EMACS=" invocation-directory invocation-name))
-     :build (:not autoloads info)
-     :files
-     (:defaults "lisp/*.el" ("etc/styles/" "etc/styles/*") "contrib/lisp/*.el"
-      ("doc/org" . "org.info") ("doc/orgguide" . "orgguide.info"))))
+     :build (:not autoloads info)))
 #+END_SRC
 
 For org configuration, see [[*Org][Org]].
