[emacs] Prefer call-process to make-process

--- a/emacs.org
+++ b/emacs.org
@@ -282,12 +282,13 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
     ;; https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/configuring_basic_system_settings/managing-services-with-systemd_configuring-basic-system-settings#shutting-down-suspending-hibernating-system_managing-services-with-systemd
     (defun koek-wm/power-off ()
       "Power off system."
-      (make-process :name "poweroff" :command '("systemctl" "poweroff")))
+      (call-process "systemctl" nil 0 nil "poweroff"))
 
     (defun koek-wm/reboot ()
       "Reboot system."
-      (make-process :name "reboot" :command '("systemctl" "reboot")))
+      (call-process "systemctl" nil 0 nil "reboot"))
 
+    ;; make-process
     (defun koek-wm/kill-power-off (&optional arg)
       "Kill Emacs and power off system.
   With `\\[universal-argument]' prefix argument ARG, reboot
@@ -301,7 +302,7 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
     (defun koek-wm/suspend ()
       "Suspend system."
       (interactive)
-      (make-process :name "suspend" :command '("systemctl" "suspend")))
+      (call-process "systemctl" nil 0 nil "suspend"))
 
     (defun koek-wm/launch-firefox (&optional arg)
       "Launch Firefox.
@@ -819,9 +820,7 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
 
   (when (executable-find "dispwin")
     (defun exar--load-color-dispwin (display-n file-name)
-      (make-process
-       :name "dispwin"
-       :command `("dispwin" "-d" ,(number-to-string display-n) ,file-name))))
+      (call-process "dispwin" nil 0 nil (number-to-string display-n) file-name)))
 
   (defun exar--load-colors (display-ns monitor-layout)
     (dolist (monitor monitor-layout)
@@ -7136,13 +7135,10 @@ current theme.
       "Set theme variant of FRAME.
   Mustn't be called directly, see
   `koek-thm/set-frame-theme-variant'."
-      (make-process
-       :name "xprop"
-       :command
-       `("xprop"
-         "-id" ,(frame-parameter frame 'outer-window-id)
-         "-f" "_GTK_THEME_VARIANT" "8u"
-         "-set" "_GTK_THEME_VARIANT" ,(if (koek-thm/darkp) "dark" "")))))
+      (call-process "xprop" nil 0 nil
+                    "-id" (frame-parameter frame 'outer-window-id)
+                    "-f" "_GTK_THEME_VARIANT" "8u"
+                    "-set" "_GTK_THEME_VARIANT" (if (koek-thm/darkp) "dark" ""))))
 
   (defun koek-thm/update-frame-theme-variant ()
     "Update theme variant of all frames."
