[emacs] Rebind eglot-code-actions

--- a/emacs.org
+++ b/emacs.org
@@ -2013,7 +2013,7 @@ produce noisy diffs.
     :straight t
     :bind
     (:map eglot-mode-map
-     ("C-c e f" . eglot-code-actions)
+     ("C-c e x" . eglot-code-actions)
      ("C-c e r" . eglot-rename))
     :hook
     ((c-mode c++-mode erlang-mode java-mode js-mode python-mode) . eglot-ensure)
