[emacs] Tweak magit-status keybinding

--- a/emacs.org
+++ b/emacs.org
@@ -280,7 +280,7 @@ VC is a placeholder.
   (use-package magit-status
     :straight magit
     :bind
-    ("C-c f g" . magit-status))
+    ("C-c f m" . magit-status))
 
   (use-package magit-diff
     :defer t
