[emacs] Tweak ediff keybindings

--- a/emacs.org
+++ b/emacs.org
@@ -320,8 +320,8 @@ VC is a placeholder.
 #+BEGIN_SRC emacs-lisp
   (use-package ediff
     :bind
-    (("C-c f d" . ediff-files)
-     ("C-c f b" . ediff-current-file))
+    (("C-c f e" . ediff-files)
+     ("C-c f C-e" . ediff-current-file))
     :preface
     (defface koek-diff/variant '((t :inherit mode-line-emphasis))
       "Face for variant label in mode line."
