--- a/emacs.org
+++ b/emacs.org
@@ -2684,12 +2684,20 @@ produce noisy diffs.
      ("C-c e r" . eglot-rename))
     :hook
     ((c-mode c++-mode erlang-mode java-mode js-mode python-mode) . eglot-ensure)
+    :preface
+    (defvar koek-eglt/jdtls-dirs
+      (mapcar (apply-partially #'expand-file-name "java/jdtls/")
+              (cons (xdg-data-home) (xdg-data-dirs)))
+      "List of directories where to look for JDT LS.
+  Directories are sorted from highest to lowest priority, i.e.,
+  earlier directories shadow later ones.")
     :config
-    ;; Eclipse JDT Language Server lacks an executable. Eglot expects to
-    ;; find the jdtls launcher on the CLASSPATH environment variable.
+    ;; JDT LS lacks an executable. Eglot expects to find the JDT LS
+    ;; launcher on the CLASSPATH environment variable.
     (when-let
-        ((launcher-program-name
-          (thread-last '("/usr/share/java/jdtls/plugins/" "c:/bin/jdtls/plugins/")
+        ((file-name
+          (thread-last koek-eglt/jdtls-dirs
+            (mapcar (apply-partially #'expand-file-name "plugins/"))
             (seq-filter #'file-exists-p)
             (seq-mapcat (lambda (file-name)
                           (directory-files file-name 'full
@@ -2697,11 +2705,10 @@ produce noisy diffs.
                                                (one-or-more (or alnum punct))
                                                ".jar" line-end))))
             car)))
-      (let ((paths (split-string (or (getenv "CLASSPATH") "") path-separator)))
-        (unless (member launcher-program-name paths)
+      (let ((paths (parse-colon-path (getenv "CLASSPATH"))))
+        (unless (member file-name paths)
           (setenv "CLASSPATH"
-                  (string-join (cons launcher-program-name paths)
-                               path-separator)))))
+                  (string-join (cons file-name paths) path-separator)))))
 
     ;; Register clangd
     (push '((c-mode c++-mode) . ("clangd")) eglot-server-programs))
