[emacs] Allow eglot to choose language server for C and C++

--- a/emacs.org
+++ b/emacs.org
@@ -2708,10 +2708,7 @@ produce noisy diffs.
       (let ((paths (parse-colon-path (getenv "CLASSPATH"))))
         (unless (member file-name paths)
           (setenv "CLASSPATH"
-                  (string-join (cons file-name paths) path-separator)))))
-
-    ;; Register clangd
-    (push '((c-mode c++-mode) . ("clangd")) eglot-server-programs))
+                  (string-join (cons file-name paths) path-separator))))))
 #+END_SRC
 
 *** Setting up clangd
