[emacs] Add function to initialize clangd

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -537,6 +537,7 @@ Ignore common artifacts. For pattern format, see ~man 5 gitignore~.
 #+BEGIN_SRC fundamental :tangle stow/git/.config/git/ignore
   # C family
   build/
+  compile_commands.json
 
   # Clojure & ClojureScript
   .shadow-cljs/
